fix: Enable authentication and set environment variables for shard replicas and mongos routers in docker-compose

--- a/docker/sharded/docker-compose.yml
+++ b/docker/sharded/docker-compose.yml
@@ -73,10 +73,10 @@ services:
       mongod --shardsvr --replSet shard1ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-#      --auth
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD1_PORT_1}:27017"
     volumes:
@@ -93,10 +93,10 @@ services:
       mongod --shardsvr --replSet shard1ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-#      --auth
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD1_PORT_2}:27017"
     volumes:
@@ -115,7 +115,7 @@ services:
       mongod --shardsvr --replSet shard1ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-#      --auth
+      --auth
     environment:
       - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
       - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
@@ -138,10 +138,10 @@ services:
       mongod --shardsvr --replSet shard2ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-#      --auth
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD2_PORT_1}:27017"
     volumes:
@@ -158,10 +158,10 @@ services:
       mongod --shardsvr --replSet shard2ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-#      --auth
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD2_PORT_2}:27017"
     volumes:
@@ -180,10 +180,10 @@ services:
       mongod --shardsvr --replSet shard2ReplSet 
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-#      --auth
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      --auth
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${SHARD2_PORT_3}:27017"
     volumes:
@@ -203,9 +203,9 @@ services:
       mongos --configdb configReplSet/config-server-1:27017,config-server-2:27017,config-server-3:27017
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${MONGOS_PORT_1}:27017"
     volumes:
@@ -232,9 +232,9 @@ services:
       mongos --configdb configReplSet/config-server-1:27017,config-server-2:27017,config-server-3:27017
       --port 27017 --bind_ip_all
       --keyFile /data/keyfile/mongodb-keyfile
-    # environment:
-    #   - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-    #   - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     ports:
       - "${MONGOS_PORT_2}:27017"
     volumes:
